--- a/projects/playground/src/index.html
+++ b/projects/playground/src/index.html
@@ -1,13 +1,23 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>Playground</title>
+  <title>Icon Playground</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1"
+  >
+  <link
+    rel="icon"
+    type="image/x-icon"
+    href="favicon.ico"
+  >
 </head>
+
 <body>
   <pg-root></pg-root>
 </body>
+
 </html>
