--- a/projects/playground/src/index.html
+++ b/projects/playground/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Icon Playground</title>
+  <title>Icon Resource</title>
   <base href="/">
   <meta
     name="viewport"
