--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Icon Resource</title>
-  <base href="https://joster-dev.github.io/icon/">  <meta
+  <base href="https://joster-dev.github.io/icon/">
+  <meta
     name="viewport"
     content="width=device-width, initial-scale=1"
   >
@@ -13,10 +14,10 @@
     type="image/x-icon"
     href="favicon.ico"
   >
-<link rel="stylesheet" href="styles.68986b61b0e51fb6b2bf.css"></head>
+<link rel="stylesheet" href="styles.2811430e17281e6a8685.css"></head>
 
 <body>
   <pg-root></pg-root>
-<script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script><script src="polyfills.9e86b32c42185429d576.js" defer></script><script src="main.550f36023aac57cea395.js" defer></script></body>
+<script src="runtime.acf0dec4155e77772545.js" defer></script><script src="polyfills.98fb742ccc5360d3caca.js" defer></script><script src="main.610de5e763087fff794f.js" defer></script></body>
 
 </html>
