og meta and scripts

--- a/projects/playground/src/index.html
+++ b/projects/playground/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Icon Resource</title>
+  <title>Icon Documentation</title>
   <base href="/">
   <meta
     name="viewport"
@@ -13,6 +13,22 @@
     rel="icon"
     type="image/x-icon"
     href="favicon.ico"
+  >
+  <meta
+    property="og:title"
+    content="Icon Documentation"
+  >
+  <meta
+    property="og:description"
+    content="Documentation for the library @joster-dev/icon"
+  >
+  <meta
+    property="og:url"
+    content="https://joster-dev.github.io/icon/"
+  >
+  <meta
+    name="twitter:card"
+    content="summary"
   >
 </head>
 
