--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Icon Resource</title>
+  <title>Icon Documentation</title>
   <base href="https://joster-dev.github.io/icon/">
   <meta
     name="viewport"
@@ -14,10 +14,26 @@
     type="image/x-icon"
     href="favicon.ico"
   >
-<link rel="stylesheet" href="styles.2811430e17281e6a8685.css"></head>
+  <meta
+    property="og:title"
+    content="Icon Documentation"
+  >
+  <meta
+    property="og:description"
+    content="Documentation for the library @joster-dev/icon"
+  >
+  <meta
+    property="og:url"
+    content="https://joster-dev.github.io/icon/"
+  >
+  <meta
+    name="twitter:card"
+    content="summary"
+  >
+<link rel="stylesheet" href="styles.35a9a58df614ac7babad.css"></head>
 
 <body>
   <pg-root></pg-root>
-<script src="runtime.acf0dec4155e77772545.js" defer></script><script src="polyfills.98fb742ccc5360d3caca.js" defer></script><script src="main.610de5e763087fff794f.js" defer></script></body>
+<script src="runtime.acf0dec4155e77772545.js" defer></script><script src="polyfills.98fb742ccc5360d3caca.js" defer></script><script src="main.fd63ecde263b12360974.js" defer></script></body>
 
 </html>
