prefer star asset

--- a/projects/playground/src/index.html
+++ b/projects/playground/src/index.html
@@ -12,7 +12,7 @@
   <link
     rel="icon"
     type="image/x-icon"
-    href="favicon.ico"
+    href="assets/star.png"
   >
   <meta
     property="og:title"
@@ -25,6 +25,10 @@
   <meta
     property="og:url"
     content="https://joster-dev.github.io/icon/"
+  >
+  <meta
+    property="og:image"
+    content="https://joster-dev.github.io/icon/assets/star.png"
   >
   <meta
     name="twitter:card"
