add required type

--- a/projects/playground/src/index.html
+++ b/projects/playground/src/index.html
@@ -19,6 +19,10 @@
     content="Icon Documentation"
   >
   <meta
+    property="og:type"
+    content="website"
+  >
+  <meta
     property="og:description"
     content="Documentation for the library @joster-dev/icon"
   >
