--- a/projects/playground/src/index.html
+++ b/projects/playground/src/index.html
@@ -38,6 +38,10 @@
     name="twitter:card"
     content="summary"
   >
+  <meta
+    name="fb:app_id"
+    content="681685009111029"
+  >
 </head>
 
 <body>
