--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     content="Icon Documentation"
   >
   <meta
+    property="og:type"
+    content="website"
+  >
+  <meta
     property="og:description"
     content="Documentation for the library @joster-dev/icon"
   >
@@ -33,6 +37,10 @@
   <meta
     name="twitter:card"
     content="summary"
+  >
+  <meta
+    name="fb:app_id"
+    content="681685009111029"
   >
 <link rel="stylesheet" href="styles.35a9a58df614ac7babad.css"></head>
 
