more meta and doc verbiage

--- a/projects/playground/src/index.html
+++ b/projects/playground/src/index.html
@@ -35,12 +35,24 @@
     content="https://joster-dev.github.io/icon/assets/star.png"
   >
   <meta
+    property="og:site_name"
+    content="Icon Documentation"
+  >
+  <meta
     name="twitter:card"
     content="summary"
   >
   <meta
-    name="fb:app_id"
+    name="twitter:image:alt"
+    content="Icons for your app"
+  >
+  <meta
+    property="fb:app_id"
     content="681685009111029"
+  >
+  <meta
+    name="twitter:site"
+    content="@JacobOsterhout"
   >
 </head>
 
