--- a/index.html
+++ b/index.html
@@ -35,17 +35,45 @@
     content="https://joster-dev.github.io/icon/assets/star.png"
   >
   <meta
+    property="og:site_name"
+    content="Icon Documentation"
+  >
+  <meta
     name="twitter:card"
     content="summary"
   >
   <meta
-    name="fb:app_id"
+    name="twitter:image:alt"
+    content="Icons for your app"
+  >
+  <meta
+    property="fb:app_id"
     content="681685009111029"
   >
-<link rel="stylesheet" href="styles.35a9a58df614ac7babad.css"></head>
+  <meta
+    name="twitter:site"
+    content="@JacobOsterhout"
+  >
+  <link
+    rel="stylesheet"
+    href="styles.35a9a58df614ac7babad.css"
+  >
+</head>
 
 <body>
   <pg-root></pg-root>
-<script src="runtime.acf0dec4155e77772545.js" defer></script><script src="polyfills.98fb742ccc5360d3caca.js" defer></script><script src="main.fd63ecde263b12360974.js" defer></script></body>
+  <script
+    src="runtime.acf0dec4155e77772545.js"
+    defer
+  ></script>
+  <script
+    src="polyfills.98fb742ccc5360d3caca.js"
+    defer
+  ></script>
+  <script
+    src="main.af6b2556b9e5fb35c741.js"
+    defer
+  ></script>
+</body>
 
 </html>
