--- a/index.html
+++ b/index.html
@@ -54,26 +54,10 @@
     name="twitter:site"
     content="@JacobOsterhout"
   >
-  <link
-    rel="stylesheet"
-    href="styles.35a9a58df614ac7babad.css"
-  >
-</head>
+<link rel="stylesheet" href="styles.35a9a58df614ac7babad.css"></head>
 
 <body>
   <pg-root></pg-root>
-  <script
-    src="runtime.acf0dec4155e77772545.js"
-    defer
-  ></script>
-  <script
-    src="polyfills.98fb742ccc5360d3caca.js"
-    defer
-  ></script>
-  <script
-    src="main.af6b2556b9e5fb35c741.js"
-    defer
-  ></script>
-</body>
+<script src="runtime.acf0dec4155e77772545.js" defer></script><script src="polyfills.98fb742ccc5360d3caca.js" defer></script><script src="main.3b07a6b2388871f6d270.js" defer></script></body>
 
 </html>
