--- a/projects/playground/src/index.html
+++ b/projects/playground/src/index.html
@@ -32,7 +32,7 @@
   >
   <meta
     property="og:image"
-    content="https://joster-dev.github.io/icon/assets/star.png"
+    content="https://joster-dev.github.io/icon/assets/icon.png"
   >
   <meta
     property="og:site_name"
