--- a/projects/playground/src/index.html
+++ b/projects/playground/src/index.html
@@ -12,7 +12,7 @@
   <link
     rel="icon"
     type="image/x-icon"
-    href="assets/star.png"
+    href="assets/icon.png"
   >
   <meta
     property="og:title"
@@ -24,7 +24,7 @@
   >
   <meta
     property="og:description"
-    content="Documentation for the library @joster-dev/icon"
+    content="Documentation for the angular library @joster-dev/icon"
   >
   <meta
     property="og:url"
@@ -35,16 +35,24 @@
     content="https://joster-dev.github.io/icon/assets/icon.png"
   >
   <meta
+    property="og:image:width"
+    content="500"
+  />
+  <meta
+    property="og:image:height"
+    content="500"
+  />
+  <meta
+    property="og:image:alt"
+    content="Star icon"
+  />
+  <meta
     property="og:site_name"
-    content="Icon Documentation"
+    content="Jacob Osterhout Projects"
   >
   <meta
     name="twitter:card"
     content="summary"
-  >
-  <meta
-    name="twitter:image:alt"
-    content="Icons for your app"
   >
   <meta
     property="fb:app_id"
