--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link
     rel="icon"
     type="image/x-icon"
-    href="assets/star.png"
+    href="assets/icon.png"
   >
   <meta
     property="og:title"
@@ -24,7 +24,7 @@
   >
   <meta
     property="og:description"
-    content="Documentation for the library @joster-dev/icon"
+    content="Documentation for the angular library @joster-dev/icon"
   >
   <meta
     property="og:url"
@@ -32,19 +32,27 @@
   >
   <meta
     property="og:image"
-    content="https://joster-dev.github.io/icon/assets/star.png"
+    content="https://joster-dev.github.io/icon/assets/icon.png"
   >
   <meta
+    property="og:image:width"
+    content="500"
+  />
+  <meta
+    property="og:image:height"
+    content="500"
+  />
+  <meta
+    property="og:image:alt"
+    content="Star icon"
+  />
+  <meta
     property="og:site_name"
-    content="Icon Documentation"
+    content="Jacob Osterhout Projects"
   >
   <meta
     name="twitter:card"
     content="summary"
-  >
-  <meta
-    name="twitter:image:alt"
-    content="Icons for your app"
   >
   <meta
     property="fb:app_id"
@@ -58,6 +66,6 @@
 
 <body>
   <pg-root></pg-root>
-<script src="runtime.acf0dec4155e77772545.js" defer></script><script src="polyfills.98fb742ccc5360d3caca.js" defer></script><script src="main.3b07a6b2388871f6d270.js" defer></script></body>
+<script src="runtime.7f5ddfad8f7469d07e57.js" defer></script><script src="polyfills.21b98f981a221bad4f29.js" defer></script><script src="main.071899572299239c7db9.js" defer></script></body>
 
 </html>
