--- a/projects/playground/src/index.html
+++ b/projects/playground/src/index.html
@@ -12,7 +12,7 @@
   <link
     rel="icon"
     type="image/x-icon"
-    href="assets/icon.png"
+    href="assets/logo.png"
   >
   <meta
     property="og:title"
@@ -32,7 +32,7 @@
   >
   <meta
     property="og:image"
-    content="https://joster-dev.github.io/icon/assets/icon.png"
+    content="https://joster-dev.github.io/icon/assets/logo.png"
   >
   <meta
     property="og:image:width"
