--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link
     rel="icon"
     type="image/x-icon"
-    href="assets/icon.png"
+    href="assets/logo.png"
   >
   <meta
     property="og:title"
@@ -32,7 +32,7 @@
   >
   <meta
     property="og:image"
-    content="https://joster-dev.github.io/icon/assets/icon.png"
+    content="https://joster-dev.github.io/icon/assets/logo.png"
   >
   <meta
     property="og:image:width"
@@ -62,10 +62,10 @@
     name="twitter:site"
     content="@JacobOsterhout"
   >
-<link rel="stylesheet" href="styles.35a9a58df614ac7babad.css"></head>
+<link rel="stylesheet" href="styles.cc9d9ae0a8f925638226.css"></head>
 
 <body>
   <pg-root></pg-root>
-<script src="runtime.7f5ddfad8f7469d07e57.js" defer></script><script src="polyfills.21b98f981a221bad4f29.js" defer></script><script src="main.071899572299239c7db9.js" defer></script></body>
+<script src="runtime.ceb5a157cfa7faae9f95.js" defer></script><script src="polyfills.f93e3456f3a5311c22d0.js" defer></script><script src="main.8cb8881b24dbb364a94b.js" defer></script></body>
 
 </html>
