--- a/index.html
+++ b/index.html
@@ -3,69 +3,23 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Icon Documentation</title>
+  <title>Icon Demo</title>
   <base href="https://joster-dev.github.io/icon/">
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1"
-  >
-  <link
-    rel="icon"
-    type="image/x-icon"
-    href="assets/logo.png"
-  >
-  <meta
-    property="og:title"
-    content="Icon Documentation"
-  >
-  <meta
-    property="og:type"
-    content="website"
-  >
-  <meta
-    property="og:description"
-    content="Documentation for the angular library @joster-dev/icon"
-  >
-  <meta
-    property="og:url"
-    content="https://joster-dev.github.io/icon/"
-  >
-  <meta
-    property="og:image"
-    content="https://joster-dev.github.io/icon/assets/logo.png"
-  >
-  <meta
-    property="og:image:width"
-    content="500"
-  />
-  <meta
-    property="og:image:height"
-    content="500"
-  />
-  <meta
-    property="og:image:alt"
-    content="Star icon"
-  />
-  <meta
-    property="og:site_name"
-    content="Jacob Osterhout Projects"
-  >
-  <meta
-    name="twitter:card"
-    content="summary"
-  >
-  <meta
-    property="fb:app_id"
-    content="681685009111029"
-  >
-  <meta
-    name="twitter:site"
-    content="@JacobOsterhout"
-  >
-<link rel="stylesheet" href="styles.cc9d9ae0a8f925638226.css"></head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="assets/logo.svg">
+  <meta property="og:title" content="Icon Demo">
+  <meta property="og:type" content="website">
+  <meta property="og:description" content="Demo for the angular library @joster-dev/icon">
+  <meta property="og:url" content="https://joster-dev.github.io/icon/">
+  <meta property="og:image" content="https://joster-dev.github.io/icon/assets/logo.png">
+  <meta property="og:image:width" content="500"/>
+  <meta property="og:image:height" content="500"/>
+  <meta property="og:image:alt" content="star icon"/>
+  <meta property="og:site_name" content="Jacob Osterhout Projects">
+<link rel="stylesheet" href="styles.19268d704eb25c7453ed.css"></head>
 
 <body>
-  <pg-root></pg-root>
-<script src="runtime.ceb5a157cfa7faae9f95.js" defer></script><script src="polyfills.f93e3456f3a5311c22d0.js" defer></script><script src="main.c8c63c1366c847d2d74d.js" defer></script></body>
+  <doc-root></doc-root>
+<script src="runtime.7b63b9fd40098a2e8207.js" defer></script><script src="polyfills.c4bda911a7c5a76af41c.js" defer></script><script src="scripts.9a6e6e69b901ae5c2c59.js" defer></script><script src="main.93d9553f41bba2041967.js" defer></script></body>
 
 </html>
